# YOLO_Number_Plate_Detection

./: .gitignore  README.md  project_templates.py  pyproject.toml
api/: app.py
artifacts/inference_results/labels/: Cars33.txt  Cars71.txt
artifacts/trained_yolo8_model/: args.yaml  results.csv
config/: config.yaml  params.yaml
data/: data.yaml
data/test/: labels.cache
data/test/labels/: Cars109.txt  Cars110.txt  Cars119.txt  Cars12.txt  Cars120.txt  Cars127.txt  Cars135.txt  Cars156.txt  Cars157.txt  Cars159.txt  Cars161.txt  Cars162.txt  Cars164.txt  Cars165.txt  Cars166.txt  Cars174.txt  Cars178.txt  Cars179.txt  Cars183.txt  Cars194.txt  Cars198.txt  Cars2.txt  Cars202.txt  Cars208.txt  Cars21.txt  Cars210.txt  Cars218.txt  Cars229.txt  Cars230.txt  Cars242.txt  Cars246.txt  Cars25.txt  Cars254.txt  Cars255.txt  Cars257.txt  Cars260.txt  Cars265.txt  Cars266.txt  Cars273.txt  Cars276.txt  (+44 more)
data/train/: labels.cache
data/train/labels/: Cars0.txt  Cars1.txt  Cars10.txt  Cars100.txt  Cars101.txt  Cars102.txt  Cars103.txt  Cars104.txt  Cars105.txt  Cars106.txt  Cars108.txt  Cars11.txt  Cars111.txt  Cars112.txt  Cars113.txt  Cars114.txt  Cars115.txt  Cars116.txt  Cars117.txt  Cars118.txt  Cars121.txt  Cars122.txt  Cars123.txt  Cars124.txt  Cars125.txt  Cars126.txt  Cars129.txt  Cars13.txt  Cars130.txt  Cars132.txt  Cars133.txt  Cars134.txt  Cars136.txt  Cars137.txt  Cars139.txt  Cars14.txt  Cars141.txt  Cars142.txt  Cars143.txt  Cars145.txt  (+282 more)
experiment/: experiments.ipynb
src/yolo_number_plate_detection/components/: model_loader.py  model_prediction.py  (+1 more)
(+6 files in other folders)
